--- a/SpotPrice.template
+++ b/SpotPrice.template
@@ -1,7 +1,7 @@
 {
   "AWSTemplateFormatVersion" : "2010-09-09",
 
-  "Description" : "Monero Miner",
+  "Description" : "Spot Price Checker",
 
   "Parameters" : {
     "KeyName": {
