--- a/SpotPrice.template
+++ b/SpotPrice.template
@@ -13,11 +13,34 @@
     "SpotInstanceType" : {
       "Description" : "What instance type do you want to find the lowest priced Region and AZ for?",
       "Type" : "String",
+      "Default" : "i3.large",
+      "AllowedValues" : [ "x1e.xlarge","x1e.8xlarge","x1e.4xlarge","x1e.32xlarge","x1e.2xlarge","x1e.16xlarge","x1.32xlarge","x1.16xlarge","t2.xlarge","t2.small","t2.nano","t2.micro","t2.medium","t2.large","t2.2xlarge","t1.micro","r4.xlarge","r4.large","r4.8xlarge","r4.4xlarge","r4.2xlarge","r4.16xlarge","r3.xlarge","r3.large","r3.8xlarge","r3.4xlarge","r3.2xlarge","p3.8xlarge","p3.2xlarge","p3.16xlarge","p2.xlarge","p2.8xlarge","p2.16xlarge","m4.xlarge","m4.large","m4.4xlarge","m4.2xlarge","m4.16xlarge","m4.10xlarge","m3.xlarge","m3.medium","m3.large","m3.2xlarge","m2.xlarge","m2.4xlarge","m2.2xlarge","m1.xlarge","m1.small", "m1.medium","m1.large","i3.xlarge","i3.large","i3.8xlarge","i3.4xlarge","i3.2xlarge","i3.16xlarge","i2.xlarge","i2.8xlarge","i2.4xlarge","i2.2xlarge","hs1.8xlarge","g3.8xlarge","g3.4xlarge","g3.16xlarge","g2.8xlarge","g2.2xlarge","f1.2xlarge","f1.16xlarge","d2.xlarge","d2.8xlarge","d2.4xlarge","d2.2xlarge","cr1.8xlarge","cg1.4xlarge","cc2.8xlarge","c5.xlarge","c5.large", "c5.9xlarge", "c5.4xlarge", "c5.2xlarge", "c5.18xlarge","c4.xlarge","c4.large", "c4.8xlarge","c4.4xlarge","c4.2xlarge","c3.xlarge","c3.large", "c3.8xlarge","c3.4xlarge","c3.2xlarge","c1.xlarge", "c1.medium"],
+      "ConstraintDescription" : "must be a valid EC2 instance type."
+    },
+
+    "SpotInstanceType2" : {
+      "Description" : "What instance type do you want to find the lowest priced Region and AZ for?",
+      "Type" : "String",
       "Default" : "x1e.xlarge",
       "AllowedValues" : [ "x1e.xlarge","x1e.8xlarge","x1e.4xlarge","x1e.32xlarge","x1e.2xlarge","x1e.16xlarge","x1.32xlarge","x1.16xlarge","t2.xlarge","t2.small","t2.nano","t2.micro","t2.medium","t2.large","t2.2xlarge","t1.micro","r4.xlarge","r4.large","r4.8xlarge","r4.4xlarge","r4.2xlarge","r4.16xlarge","r3.xlarge","r3.large","r3.8xlarge","r3.4xlarge","r3.2xlarge","p3.8xlarge","p3.2xlarge","p3.16xlarge","p2.xlarge","p2.8xlarge","p2.16xlarge","m4.xlarge","m4.large","m4.4xlarge","m4.2xlarge","m4.16xlarge","m4.10xlarge","m3.xlarge","m3.medium","m3.large","m3.2xlarge","m2.xlarge","m2.4xlarge","m2.2xlarge","m1.xlarge","m1.small", "m1.medium","m1.large","i3.xlarge","i3.large","i3.8xlarge","i3.4xlarge","i3.2xlarge","i3.16xlarge","i2.xlarge","i2.8xlarge","i2.4xlarge","i2.2xlarge","hs1.8xlarge","g3.8xlarge","g3.4xlarge","g3.16xlarge","g2.8xlarge","g2.2xlarge","f1.2xlarge","f1.16xlarge","d2.xlarge","d2.8xlarge","d2.4xlarge","d2.2xlarge","cr1.8xlarge","cg1.4xlarge","cc2.8xlarge","c5.xlarge","c5.large", "c5.9xlarge", "c5.4xlarge", "c5.2xlarge", "c5.18xlarge","c4.xlarge","c4.large", "c4.8xlarge","c4.4xlarge","c4.2xlarge","c3.xlarge","c3.large", "c3.8xlarge","c3.4xlarge","c3.2xlarge","c1.xlarge", "c1.medium"],
       "ConstraintDescription" : "must be a valid EC2 instance type."
-    }
+    },
 
+    "SpotInstanceType3" : {
+      "Description" : "What instance type do you want to find the lowest priced Region and AZ for?",
+      "Type" : "String",
+      "Default" : "c5.4xlarge",
+      "AllowedValues" : [ "x1e.xlarge","x1e.8xlarge","x1e.4xlarge","x1e.32xlarge","x1e.2xlarge","x1e.16xlarge","x1.32xlarge","x1.16xlarge","t2.xlarge","t2.small","t2.nano","t2.micro","t2.medium","t2.large","t2.2xlarge","t1.micro","r4.xlarge","r4.large","r4.8xlarge","r4.4xlarge","r4.2xlarge","r4.16xlarge","r3.xlarge","r3.large","r3.8xlarge","r3.4xlarge","r3.2xlarge","p3.8xlarge","p3.2xlarge","p3.16xlarge","p2.xlarge","p2.8xlarge","p2.16xlarge","m4.xlarge","m4.large","m4.4xlarge","m4.2xlarge","m4.16xlarge","m4.10xlarge","m3.xlarge","m3.medium","m3.large","m3.2xlarge","m2.xlarge","m2.4xlarge","m2.2xlarge","m1.xlarge","m1.small", "m1.medium","m1.large","i3.xlarge","i3.large","i3.8xlarge","i3.4xlarge","i3.2xlarge","i3.16xlarge","i2.xlarge","i2.8xlarge","i2.4xlarge","i2.2xlarge","hs1.8xlarge","g3.8xlarge","g3.4xlarge","g3.16xlarge","g2.8xlarge","g2.2xlarge","f1.2xlarge","f1.16xlarge","d2.xlarge","d2.8xlarge","d2.4xlarge","d2.2xlarge","cr1.8xlarge","cg1.4xlarge","cc2.8xlarge","c5.xlarge","c5.large", "c5.9xlarge", "c5.4xlarge", "c5.2xlarge", "c5.18xlarge","c4.xlarge","c4.large", "c4.8xlarge","c4.4xlarge","c4.2xlarge","c3.xlarge","c3.large", "c3.8xlarge","c3.4xlarge","c3.2xlarge","c1.xlarge", "c1.medium"],
+      "ConstraintDescription" : "must be a valid EC2 instance type."
+    },
+
+    "SpotInstanceType4" : {
+      "Description" : "What instance type do you want to find the lowest priced Region and AZ for?",
+      "Type" : "String",
+      "Default" : "cr1.8xlarge",
+      "AllowedValues" : [ "x1e.xlarge","x1e.8xlarge","x1e.4xlarge","x1e.32xlarge","x1e.2xlarge","x1e.16xlarge","x1.32xlarge","x1.16xlarge","t2.xlarge","t2.small","t2.nano","t2.micro","t2.medium","t2.large","t2.2xlarge","t1.micro","r4.xlarge","r4.large","r4.8xlarge","r4.4xlarge","r4.2xlarge","r4.16xlarge","r3.xlarge","r3.large","r3.8xlarge","r3.4xlarge","r3.2xlarge","p3.8xlarge","p3.2xlarge","p3.16xlarge","p2.xlarge","p2.8xlarge","p2.16xlarge","m4.xlarge","m4.large","m4.4xlarge","m4.2xlarge","m4.16xlarge","m4.10xlarge","m3.xlarge","m3.medium","m3.large","m3.2xlarge","m2.xlarge","m2.4xlarge","m2.2xlarge","m1.xlarge","m1.small", "m1.medium","m1.large","i3.xlarge","i3.large","i3.8xlarge","i3.4xlarge","i3.2xlarge","i3.16xlarge","i2.xlarge","i2.8xlarge","i2.4xlarge","i2.2xlarge","hs1.8xlarge","g3.8xlarge","g3.4xlarge","g3.16xlarge","g2.8xlarge","g2.2xlarge","f1.2xlarge","f1.16xlarge","d2.xlarge","d2.8xlarge","d2.4xlarge","d2.2xlarge","cr1.8xlarge","cg1.4xlarge","cc2.8xlarge","c5.xlarge","c5.large", "c5.9xlarge", "c5.4xlarge", "c5.2xlarge", "c5.18xlarge","c4.xlarge","c4.large", "c4.8xlarge","c4.4xlarge","c4.2xlarge","c3.xlarge","c3.large", "c3.8xlarge","c3.4xlarge","c3.2xlarge","c1.xlarge", "c1.medium"],
+      "ConstraintDescription" : "must be a valid EC2 instance type."
+    }
   },
 
   "Resources" : {
@@ -44,6 +67,15 @@
                       "sudo npm install -g awespottr\n",
                       "awespottr ",
                       { "Ref" : "SpotInstanceType"},
+                      "\n",
+                      "awespottr ",
+                      { "Ref" : "SpotInstanceType2"},
+                      "\n",
+                      "awespottr ",
+                      { "Ref" : "SpotInstanceType3"},
+                      "\n",
+                      "awespottr ",
+                      { "Ref" : "SpotInstanceType4"},
                       "\n"
                       ]]}}
                 }
